--- a/WebBilboSKP.css
+++ b/WebBilboSKP.css
@@ -20,7 +20,7 @@
 body{
     width: 100%;
     height: 100vh;
-    background: url(../img/1564554750_a\ group\ of\ 5\ people\ standing\ in\ the\ mountains\,\ rea_512-v2-1.png) no-repeat;
+    background: url(img/1564554750_a\ group\ of\ 5\ people\ standing\ in\ the\ mountains\,\ rea_512-v2-1.png) no-repeat;
     background-size: cover;
     background-position: center;
 }
