--- a/WebBilboSKP.css
+++ b/WebBilboSKP.css
@@ -84,6 +84,12 @@ header{
     transition: all .50s ease;
 }
 
+.header-btn .in:hover{
+    background-color: transparent;
+    border: 1px solid var(--color-blanco-hueso);
+    color: var(--color-blanco-hueso);
+}
+
 /*--- responsive nav ---*/
 @media (max-width: 1530px ){
     header{
