--- a/css/Blog.css
+++ b/css/Blog.css
@@ -199,6 +199,11 @@ header{
     border-radius: 5px;
     transition: all .50s ease;
 }
+.header-btn .in:hover{
+    background-color: transparent;
+    border: 1px solid #f5f5f5;
+    color: #fff;
+}
 li{
     list-style: none;
 }
